--- a/KN.B2B.Web/KN.B2B.Web.csproj
+++ b/KN.B2B.Web/KN.B2B.Web.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\KN.Messaging.SendGrid\KN.Messaging.SendGrid.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="assets\images\" />
+  </ItemGroup>
+
 </Project>
